@@ -1,9 +1,8 @@
 Source: blah
 Architecture: any
-Build-Depends: golang-go
 
 Package: blah
 Architecture: all
-Built-Using: ${w32:Built-Using}
+Built-Using: ${misc:Built-Using}
 Description: blah
  blah
