@@ -1,2 +1,2 @@
 Remove unnecessary ${misc:Built-Using} for blah
-Fixed-Lintian-Tags: missing-built-using-field-for-golang-package
+Fixed-Lintian-Tags: built-using-field-on-arch-all-package
